--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@ Body {
 }
 
 img {
-    width: 100%;
+    width: 30%;
 }
 
 .portfolio {
     display: grid;
-    grid-template: auto auto auto auto auto / 1fr 1fr 1fr;
+    grid-template: 2 auto auto auto auto / 1fr 1fr 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
   }
